# python-package-setup

./: README.md  pyproject.toml
src/a_package/a_script/: args.py  say_hello.py
src/a_package/analysis/: analyse_data.py
src/a_package/preprocessing/: get_data.py
src/a_package/sample/: __init__.py
src/analysis/: analyse_data.py
tests/: test_analysis.py  test_sample.py
